--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
                <table>
                    <tr>
                        <td >Product id</td>
-                       <td ><input id="id" type="number"></td>
+                       <td ><input id="id" type="number" required></td>
                    </tr>
                    <tr>
                        <td >Product Name</td>
-                       <td ><input id="name" type="text"></td>
+                       <td ><input id="name" type="text" required></td>
                     </tr>
                     <tr>
                         <td>Product Price</td>
-                        <td ><input id="price" type="text"></td>
+                        <td ><input id="price" type="text" required></td>
                     </tr>
                </table>
                <br><br>
